Ensure flatlaf is using native libraries [3042]
This commit simply sets the "flatlaf.useNativeLibrary" property to true.

Also removes the "java.security.acl" from the set of --add-opens lines.